--- a/css/app.css
+++ b/css/app.css
@@ -6,8 +6,33 @@ body {
         #D9DBD4 15% 100%);
 
     display: flex;
+
 }
 
 .boolzap {
     border: 3px solid #333;
+    background-color: #eee;
+
 }
+
+.row, .col, .col-4 {
+    border: 2px dashed tomato;
+    height: 100%;
+}
+
+.user-bar,
+.notification-banner,
+.search-bar,
+.chat-input {
+    width: 100%;
+    height: 75px;
+    background-color: #333;
+    color: #eee;
+}
+
+.boolzap__navbar > *,
+.boolzap__chat > * {
+    border: 2px dashed cornflowerblue;
+}
+
+
