--- a/css/app.css
+++ b/css/app.css
@@ -42,6 +42,8 @@ i:not(.notification__icon>i) {
     height: 75px;
     background-color: #eaeaea;
     color: #333;
+
+    position: relative;
 }
 
 .boolzap__chat {
@@ -106,6 +108,9 @@ i:not(.notification__icon>i) {
     background-repeat: repeat;
     background-size: contain;
 }
+
+/* searchbar */
+
 
 /* messages */
 .messages-container {
