ADD custom dropdown added to msg

--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,11 @@ img {
     max-width: 100%;
 }
 
+ul, ol, li, menu {
+    list-style: none;
+    padding: 0;
+}
+
 a {
     color: currentColor;
 }
@@ -168,4 +173,16 @@ i:not(.notification__icon>i) {
 
 .message__text {
     word-wrap: break-word;
+}
+
+.message__menu {
+    background-color: #333;
+    color: #ddd;
+    position: absolute;
+    top: 30px;
+    right: 10px;
+}
+
+.message__menu > * {
+    padding: 10px 20px;
 }
